# ev-reth

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.cross  Dockerfile.cross-aarch64  Dockerfile.cross-x86_64  LICENSE-MIT  Makefile  README.md  deny.toml  eden.md  justfile  package-lock.json  package.json  rust-toolchain.toml
.claude/skills/: contracts.md  ev-reth-core.md  ev-reth-evm.md  ev-reth-evolve.md  ev-reth-testing.md
.github/: CODEOWNERS
.github/workflows/: add-to-project.yml  claude-code-review.yml  contracts_test.yml  dependencies.yml  docker.yml  e2e.yml  ev_deployer.yml  integration.yml  lint-actions.yml  lint.yml  release.yml  unit.yml  update-skills.yml
clients/: README.md  evnode-viem.ts  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
clients/examples/: basic.ts  batch.ts  contract-call.ts  contract-deploy.ts  manual-params.ts  sponsored.ts
clients/src/: client.ts  encoding.ts  index.ts  signing.ts  types.ts
clients/test/: evnode-basic.ts  evnode-flows.ts  evnode-sponsored.ts
clients/tests/: basic.test.ts  flows.test.ts  sponsored.test.ts  unit.test.ts
clients/tests/e2e/: coordinator.ts  flows.e2e.test.ts  setup.ts
contracts/: README.md  foundry.toml
contracts/script/: DeployFeeVault.s.sol  GenerateAdminProxyAlloc.s.sol  GenerateFeeVaultAlloc.s.sol
contracts/src/: AdminProxy.sol  BurnCollector.sol  FeeVault.sol
contracts/test/: AdminProxy.t.sol  BurnCollector.t.sol  FeeVault.t.sol
crates/common/: Cargo.toml
crates/common/src/: lib.rs  sponsor_transaction.rs
crates/ev-precompiles/: Cargo.toml  README.md
crates/ev-precompiles/src/: config.rs  inspector_gate.rs  lib.rs  mint.rs  mint_precompile.rs  proposer.rs  token_duality.rs
crates/ev-primitives/: Cargo.toml
crates/ev-primitives/src/: lib.rs  pool.rs  tx.rs
crates/ev-revm/: Cargo.toml
crates/ev-revm/benches/: cache_benchmark.rs
crates/ev-revm/src/: api.rs  base_fee.rs  cache.rs  config.rs  deploy.rs  evm.rs  factory.rs  handler.rs  lib.rs  tx_env.rs
crates/ev-revm/src/api/: builder.rs  exec.rs
crates/evolve/: Cargo.toml
crates/evolve/src/: config.rs  consensus.rs  evm.rs  executor.rs  lib.rs  precompiles.rs  tests.rs  types.rs
crates/evolve/src/rpc/: mod.rs  txpool.rs
crates/evolve/tests/: consensus_tests.rs
crates/exex-remote/: Cargo.toml  build.rs
crates/exex-remote/proto/: remote_exex.proto
crates/exex-remote/src/: codec.rs  error.rs  lib.rs  types.rs
crates/fee-handlers/: Cargo.toml
crates/fee-handlers/src/: apply.rs  compute.rs  config.rs  lib.rs  types.rs
crates/fee-handlers/tests/: compute.rs
crates/node/: Cargo.toml
crates/node/src/: args.rs  attributes.rs  builder.rs  chainspec.rs  config.rs  error.rs  evm_executor.rs  executor.rs  exex.rs  hardfork.rs  lib.rs  node.rs  payload_service.rs  payload_types.rs  proposer_rpc.rs  rpc.rs  test_utils.rs  tracing_ext.rs  txpool.rs  validator.rs
crates/tests/: Cargo.toml
crates/tests/assets/: genesis.json
crates/tests/src/: common.rs  e2e_tests.rs  engine_api_tests.rs  fee_redirect_node_test.rs  integration_tests.rs  lib.rs  payload_builder_tests.rs  test_deploy_allowlist.rs  test_evolve_engine_api.rs  test_remote_exex_contract.rs
docs/: UPGRADE-v0.2.0.md  UPGRADE-v0.2.2.md  UPGRADE-v0.3.0.md  UPGRADE-v0.4.0.md  canonical-hash-plan.md  eip1559-configuration.md  fee-handlers.md
docs/adr/: ADR-0001-base-fee-redirect.md  ADR-0001-fee-handlers.md  ADR-0002-native-minting-precompile.md  ADR-0003-typed-transactions-sponsorship.md  ADR-0004-proposer-rotation-precompile.md  adr-template.md
docs/contracts/: admin_proxy.md  burn_collector.md  fee_vault.md
docs/guide/: fee-systems.md  permissioned-evm.md
etc/: eden-genesis.json  ev-reth-genesis.json  fee-handlers.example.json
scripts/: eden-genesis.json  generate-eden-genesis.sh  test-eden-upgrade.sh
scripts/reth-backup/: Dockerfile  README.md  backup-lib.sh  backup.sh
