
[package]
name = "ev-precompiles"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
# Reth
reth-primitives = { workspace = true }
reth-ethereum = { workspace = true }
reth-revm = { workspace = true }

# Revm
revm = { workspace = true }

# EVM
alloy-primitives = { workspace = true }
alloy-evm = { workspace = true }
alloy = { version = "1.0.37", default-features = false, features = ["sol-types"] }
bytes = "1.5.0"

# Tooling
eyre = "0.6.11"
thiserror = "1.0.58"
tracing = { workspace = true }
