
[package]
name = "ev-precompiles"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Custom EVM precompiles for ev-reth"

[dependencies]
# Reth
reth-primitives = { workspace = true }
reth-ethereum = { workspace = true }
reth-revm = { workspace = true }

# Revm
revm = { workspace = true }

# EVM
alloy-primitives = { workspace = true }
alloy-evm = { workspace = true }
alloy = { workspace = true }
bytes = { workspace = true }

# Tooling
eyre = { workspace = true }
tracing = { workspace = true }
