[package]
name = "ev-revm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Base-fee redirect adapters for revm"

[dependencies]
alloy-evm.workspace = true
alloy-primitives.workspace = true
reth-revm.workspace = true
reth-evm.workspace = true
reth-primitives.workspace = true
reth-evm-ethereum.workspace = true
revm-inspector.workspace = true
revm-context-interface.workspace = true
thiserror.workspace = true
ev-precompiles = { path = "../ev-precompiles" }
ev-primitives = { path = "../ev-primitives" }

[dev-dependencies]
alloy-sol-types.workspace = true

[lints]
workspace = true
