[package]
name = "ev-exex-remote"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Shared remote ExEx transport types for ev-reth"

[dependencies]
alloy-primitives = { workspace = true, features = ["serde"] }
bincode.workspace = true
serde.workspace = true
thiserror.workspace = true
tonic.workspace = true
prost.workspace = true

[build-dependencies]
tonic-build.workspace = true

[lints]
workspace = true
